--- a/MakerProgress/View/Base.lproj/LaunchScreen.storyboard
+++ b/MakerProgress/View/Base.lproj/LaunchScreen.storyboard
@@ -6,6 +6,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,19 +23,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="calendar.png" translatesAutoresizingMaskIntoConstraints="NO" id="GjS-hS-TFG">
-                                <rect key="frame" x="120" y="120" width="134" height="134"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Maker" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sFd-7B-vHc">
-                                <rect key="frame" x="86" y="50" width="79" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MakerProgress" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MWG-Qv-yov">
+                                <rect key="frame" x="96" y="59" width="182" height="34"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
+                                <color key="textColor" red="0.88530379530000003" green="0.3416864872" blue="0.29610881210000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="calendar.png" translatesAutoresizingMaskIntoConstraints="NO" id="GjS-hS-TFG">
+                                <rect key="frame" x="120" y="266" width="134" height="134"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="134" id="Jdm-Qf-XjP"/>
+                                    <constraint firstAttribute="width" constant="134" id="ee0-4m-UOZ"/>
+                                    <constraint firstAttribute="width" secondItem="GjS-hS-TFG" secondAttribute="height" multiplier="1:1" id="svI-eH-SIH"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="MWG-Qv-yov" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="80" id="9Er-SM-8rS"/>
+                            <constraint firstItem="GjS-hS-TFG" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Bj4-em-rli"/>
+                            <constraint firstItem="MWG-Qv-yov" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="39" id="j49-b7-OhZ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="MWG-Qv-yov" secondAttribute="trailing" constant="81" id="rNN-9w-syd"/>
+                            <constraint firstItem="GjS-hS-TFG" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="zMA-94-3VK"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
